[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tele-style"
version = "1.1.0"
description = "TeleStyle custom nodes for ComfyUI video style transfer and official Qwen image style transfer."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "diffusers>=0.29.0",
  "transformers",
  "huggingface_hub",
  "omegaconf",
  "safetensors",
  "ftfy",
  "regex",
  "torchvision",
  "opencv-python",
  "torch",
]
classifiers = [
  "Operating System :: OS Independent",
  "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/aistudynow/Comfyui-tetestyle-image-video"
"Bug Tracker" = "https://github.com/aistudynow/Comfyui-tetestyle-image-video/issues"

[tool.comfy]
PublisherId = "neurodanzelus-cmd"
DisplayName = "TeleStyle"
requires-comfyui = ">=0.3.0"
