[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-tetestyle-image-video"
version = "1.2.0"
description = "TeleStyle custom nodes for ComfyUI video style transfer and official Qwen image style transfer."
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Environment :: GPU :: NVIDIA CUDA",
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/aistudynow/Comfyui-tetestyle-image-video"
"Bug Tracker" = "https://github.com/aistudynow/Comfyui-tetestyle-image-video/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.comfy]
PublisherId = "aistudynow"
DisplayName = "Comfyui-tetestyle-image-video"
requires-comfyui = ">=0.3.0"
